#feature/alpha_kapil
- Refactored code
- Added javadocs
- Removed TODOs and added necessary codes